gobmkida/g1/ascii_showboard
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:702:12: error: array type 'char [19]' is not assignable
hspots[20] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:703:12: error: array type 'char [19]' is not assignable
hspots[58] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:704:12: error: array type 'char [19]' is not assignable
hspots[22] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:705:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:706:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:713:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:717:17: error: array type 'char [19]' is not assignable
hspots[v3 + 53] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:718:18: error: array type 'char [19]' is not assignable
hspots[20 * v11] = 43; 
~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:720:18: error: array type 'char [19]' is not assignable
hspots[v13 + 57] = 43; 
~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:725:18: error: array type 'char [19]' is not assignable
hspots[20 * v13] = 43; 
~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:729:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:730:22: error: array type 'char [19]' is not assignable
hspots[19 * v10 + 2] = 43; 
~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:731:18: error: array type 'char [19]' is not assignable
hspots[v10 + 38] = 43; 
~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:732:18: error: array type 'char [19]' is not assignable
hspots[20 * v10] = 43; 
~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:733:24: error: array type 'char [19]' is not assignable
hspots[20 * ( v3 / 2)] = 43; 
~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:741:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:743:21: error: array type 'char [19]' is not assignable
hspots[19 * v9 + 3] = 43; 
~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:744:17: error: array type 'char [19]' is not assignable
hspots[v3 + 53] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:749:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:750:21: error: array type 'char [19]' is not assignable
hspots[19 * v4 + 2] = 43; 
~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:751:17: error: array type 'char [19]' is not assignable
hspots[v4 + 38] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:754:16: error: array type 'char [19]' is not assignable
hspots[4 * v5] = 43; 
~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/interface/play_ascii.c:783:7: error: use of undeclared identifier 'pdfa'
v6 = &pdfa.name[70]; 
      ^
23 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/ascii_showboard/src/obj/2/play_ascii.o] Error 1
